--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api:${jUnitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${jUnitVersion}"
 }
+
+test {
+    useJUnitPlatform()
+}
