--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@ plugins {
     id 'java'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.holub.life.Life'
+        )
+    }
+}
+
 group 'com.holub'
 version '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
